main.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-size: 16px;
}
.closeMe {
    background: linear-gradient(45deg, pink, white);
    align-self: center;
    margin-left: 8px;
    font-family: sans-serif;
    position: absolute;
    padding: 12px 16px;
    cursor: pointer;
    border: 1px solid #000000;
    border-radius: 8px;
}

.closeMe:hover {
    background: linear-gradient(45deg, white, pink);
}

.quickHelpBar {
    position: relative;
    display: flex;
    height: 64px;
    background-color: #f8d7da;
    color: #000000;
}
.quickHelpBar ul{
    align-items: center;
    margin: 0 auto;
    list-style: none;
    display: flex;
}

.quickHelpBar ul li {
    margin: 0 15px;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 16px;
}

.quickHelpBar p a {
    align-content: center;
    margin: 0 auto;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 16px;
}
#mainNav{
    background: linear-gradient(32deg, rgb(18, 24, 78), rgb(69, 115, 241));
    border-bottom: 4px solid white;
}
#navList {
    align-items: center;
    height: auto;
    width: auto;
    display: flex;
    justify-content: space-evenly;
    padding: 0;
}
#navList li {
    display: flex;
    margin: 0 auto;
    width: auto;
    height: auto;
    color: whitesmoke;
    list-style: none;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    transition: 0.3s ease;
}
#navList li a {
    /* transform: scale(1); */
    text-align: center;
    font-size: 2.25rem;
    font-weight: 700;
    text-decoration: none;
    color: inherit;
}

#navList li:hover {
    text-shadow: 0 4px 8px rgb(170, 192, 253); /* Adds shadow for depth */
    transform: scale(1.2); /* Scales up the item */
}

#navList li:active {
    transform: scale(1.1);
    color: blue;
}

#newsTitle {
    text-align: center;
    font-size: 2.5rem;
    font-weight: 700;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    margin: 2rem 0 1rem 0;
}

#logo {
    position: relative;
    height: 80px;
    border-radius: 50%;
    overflow: hidden;
    border: 2px solid #000000;
}

.sectionBanner {
    height: fit-content;
    border-top-left-radius: 10%;
    border-bottom-left-radius: 10%;
    display: flex;
    position: relative;
    background-color: navy;
    color: white;
}
.sectionBanner img {
    width: auto;
    height:auto;
    border-top-left-radius: 10%;
    border-bottom-left-radius: 10%;
    overflow: hidden;
    border-right: 4px solid white;
}

.sectionInfoBox {
    margin:auto;
    width: 60%;
    height: fit-content;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    padding: 1rem;
}

.sectionInfoBox h1 {
    text-align: center;
    font-size: 2.5rem;
    font-weight: 700;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.sectionInfoBox p {

    font-size: 2rem;
    line-height: 1.6;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    text-align: center;
}

#consultingImage {
    width: auto;
    height: auto;
    border-top-left-radius: 10%;
    border-bottom-left-radius: 10%;
    overflow: hidden;
    border-right: 4px solid white;
}

#newsGrid {
    overflow: hidden;
    width: 60%;
    list-style: none;
    display: grid;
    margin: 0 auto;
    grid-template: 1fr / repeat(auto-fit, 1fr);
    gap: 1rem;
    padding: 1rem;
}

#newsGrid li{
    border-radius: 20px;
    overflow: hidden;
    border: 2px solid navy;
}
#newsGrid li h2{
    height: 4rem;
    align-content: center;
    font-family: sans-serif;
    text-align: center;
    background-color: navy;
    color: white;
    font-size: 2rem;
    overflow: hidden;
}

#newsGrid li p{
    padding: 0.5rem;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 1.5rem;
    text-align: justify;
    text-justify: inter-word;
}

.newsItem{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100%;
}

.servicesGrid{
    list-style: none;
    display: grid;
    grid-template: repeat(auto-fit, minmax(300px, 1fr)) / repeat(auto-fit, minmax(300px, 1fr));
    gap: 1rem;
    padding: 1rem;
}

.servicesGrid li{
    display: flex;
    flex-direction: column;
    border: 2px solid navy;
    border-radius: 10px;
}

.servicesGrid li h2{
    height: 4rem;
    align-content: center;
    font-family: sans-serif;
    text-align: center;
    background: linear-gradient(128deg, navy, blue);
    color: white;
    font-size: 2rem;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
}
.serviceListing{
    overflow:hidden;
}
.serviceListing p{
    width: 80%;
    margin: auto;
    padding: 0.5rem;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 1.5rem;
}
.serviceWriteup {
    display: flex;
}
.adSpace {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 1rem auto;
    max-height: 640px;
    padding: 1rem;
    border: 2px solid navy;
    border-radius: 20px;
    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
    background-color: white;
    text-align: center;
}
.adSpace a {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 2rem;
    margin-bottom: 1rem;
}
.adSpace img {
    margin: 0 auto;
    width: 400px;
    height: auto;
}

#setItUpButton {
    position: fixed;
    height: auto;
    width: auto;
    left: 30%;
    padding: 12px 24px;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 900;
    text-decoration: none;
    background-color: orange;
    color: black;
    border: 5px solid black;
    border-radius: 10%;
    transition: 0.3s ease;
    cursor: pointer;
}

.emailFormButton {
    margin: 0;
    font-size: 2rem;
}

#onboardingForm {
    visibility: hidden;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.detailedServiceDescription {
    margin: 0 auto;
    background-color: white;
    width: 85%;
    line-height: 1.6;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    text-align: justify;
    text-justify: inter-word;
}

.detailedServiceDescription p {
    margin: 0 auto;
    padding: 2rem;
    font-size: 1.5rem;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    text-align: justify;
    text-justify: inter-word;
}

.learnMore {
    margin: 0 auto 8px auto;
    padding: 8px 16px;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    text-decoration: none;
    background-color: navy;
    color: white;
    border: 2px solid lightblue;
    border-radius: 8px;
    transition: 0.3s ease;
}

.learnMore:hover{
    background-color: lightblue;
    color: navy;
    box-shadow: 2px 2px 8px rgba(0, 0, 0, 1);
    transform: scale(1.05);
}

.mainContent {
    margin: 0 auto;
    width: 60%;
    border: 2px solid navy;
    overflow: hidden;
    border-radius: 20px;
    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
}

.mainContent h1 {
    background-color: navy;
    color: white;
    text-align: center;
    font-size: 2.5rem;
    font-weight: 700;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.serviceDetails {
    background-image: url('./media/code.png');
}

#onboardingForm{
    position: fixed;
    top: 10%;
    left: 10%;
    margin: 1rem auto;
    max-height: 580px;
    padding: 1rem;
    border: 2px solid black;
    border-radius: 20px;
    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
    background-color: white;
    text-align: center;
    color: black;
}

#onboardingForm h2 {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 1.75rem;
    margin-bottom: 1rem;
}

#onboardingForm form {
    padding: 1rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: navy;
    color: white;
    border-radius: 10px;
}

#onboardingForm label {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 1.5rem;
    margin: 1rem;
}

#onboardingForm input, #onboardingForm textarea {
    width: 80%;
    padding: 0.5rem;
    margin-bottom: 1rem;
    font-size: 1.25rem;
    border: 1px solid #ccc;
    border-radius: 8px;
}

#formClose {
    background: linear-gradient(45deg, pink, white);
    align-self: center;
    margin-top: 8px;
    font-family: sans-serif;
    position: relative;
    padding: 12px 16px;
    cursor: pointer;
    border: 1px solid #000000;
    border-radius: 8px;
}
/* Responsive Web Design */
@media (max-width: 1400px) {

    .servicesGrid li h2{
        font-size: 1.5rem;
    }
}

@media (max-width: 1130px){
    #navList li a {
        font-size: 1.75rem;
    }
    #newsTitle {
        font-size: 2rem;
    }
    #newsGrid li h2{
        font-size: 1.5rem;
    }
    #newsGrid li p{
        font-size: 1.25rem;
    }
}

@media (max-width: 900px) {
    .sectionInfoBox h1 {
        font-size: 2rem;
    }
    .sectionInfoBox p {
        font-size: 1.5rem;
    }
    #navList li a {
        font-size: 1.5rem;
    }
}

@media (max-width: 760px) {
    #navList {
        padding: 8px;
        display: grid;
        gap: 8px;
        grid-template-rows: auto auto auto;
        grid-template-columns: 1fr 1fr 1fr;

    }
    /* .lastMultiColumn {
        grid-column: span 2;
        justify-self: center;
    } */

    #logo {
        grid-row: span 3;
        margin: auto;
    }

    .sectionBanner img{
        display: none;
    }

    .sectionBanner {
        border-radius: 0;
    }
    .sectionInfoBox {
        background-color: navy;
    }
    #newsGrid {
        width: 90%;
        grid-template: repeat(auto-fit, minmax(200px, 1fr)) / 1fr;
    }
    #welcomeBanner {
        background-image: url('./media/Consulting.png');
        background-size: cover;
        background-position: center;
        z-index: -1; ;
    }
}

/* next break point is 500px */

